--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="https://codepen.io/ste-vg/pen/QrrrOz.js"></script>
 
     <title>Rick&Morty</title>
   </head>
